[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
port_server={ path="../../port_server" }
limit_order_book={ path = "../limit-order-book"}
crossbeam-channel = "0.5.14"
threadpool = "1.8.1"
tokio={ version="1.43.0", features = ["full"] }
serde_json = "1.0.135"
bincode = "1.3.3"
uuid = { version="1.12.1", features=["v4"]}
dashmap = "6.1.0"
